--- a/Tetris/Tetris/Tetris.csproj
+++ b/Tetris/Tetris/Tetris.csproj
@@ -107,14 +107,24 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Block\Block.cs" />
+    <Compile Include="Block\BlockCrinkleLeft.cs" />
+    <Compile Include="Block\BlockCrinkleRight.cs" />
+    <Compile Include="Block\BlockJShape.cs" />
+    <Compile Include="Block\BlockLShape.cs" />
+    <Compile Include="Block\BlockTShape.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Grid.cs" />
-    <Compile Include="MediaManager.cs" />
+    <Compile Include="HelperClasses\InputHelper.cs" />
+    <Compile Include="HelperClasses\MediaManager.cs" />
     <Compile Include="PlayManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Block\BlockRectangle.cs" />
+    <Compile Include="Block\BlockSquare.cs" />
     <Compile Include="TetrisFacade.cs" />
+    <Compile Include="TurnManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
